--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,7 @@ abstract: unknown
 author:
   - unknown
 build_requires:
-  ExtUtils::MakeMaker: 0
+  Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
@@ -18,4 +18,4 @@ no_index:
     - t
     - inc
 requires: {}
-version: 0.01
+version: 0.02
